fixing ul sound gap

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 *, *::before, *::after {
   box-sizing: border-box;
 }
@@ -483,7 +482,7 @@ p span {
   .cv-photo-wrapper {
     grid-column: 1;
     grid-row: 1;
-    justify-content: center; /* Центрируем фото */
+    justify-content: center;
   }
 }
 
@@ -799,8 +798,6 @@ p span {
   max-width: 45rem;
   margin-top: 3rem;
   padding-inline: 2rem;
-  /* border: 3px solid black; */
-  /* border-radius: 8px; */
 }
 @media (max-width: 768px) {
   .sound-pic-wrapper {
